--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,9 @@ body.home-page {
   display: flex;
   justify-content: center;
   align-items: center;
+
+  height: 100dvh; /* Fix for Chrome mobile */
+  height: 100vh;  /* Fallback for Safari and others */
 }
 
 .home-links {
@@ -135,6 +138,9 @@ body.scanner-landing {
   display: flex;
   justify-content: center;
   align-items: center;
+
+  height: 100dvh; /* Fix for Chrome mobile */
+  height: 100vh;  /* Fallback for Safari and others */
 }
 
 .scanner-name {
